# fastapi_app

./: .gitignore  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
backend/: .env.template
backend/auth/: base_config.py
backend/core/: config.py
backend/tasks/: router.py  tasks.py
docker/: app.sh  celery.sh
fastapi_course/: .env.template  main.py
fastapi_course/alembic/: env.py
fastapi_course/alembic/versions/: 2024_08_20_2030-ba610a5362f8_create_roles_users_table.py  2024_08_21_1042-2a6cea434071_initial.py  2024_08_22_1448-394c2e56b110_add_tables.py  2024_08_22_1454-8d110dbf2f7b_add_operation_table.py  2024_08_23_1214-3324e24a03ef_add_tables.py
fastapi_course/api/: __init__.py  trades.py  users.py
fastapi_course/auth/: auth.py  base_config.py  database.py  manager.py  schemas.py  utils.py
fastapi_course/core/: config.py
fastapi_course/core/models/: __init__.py  base.py  db_helper.py  role.py  roles.py  users.py
fastapi_course/operations/: models.py  router.py
fastapi_course/src/auth/: __init__.py  manager.py  models.py  schemas.py  utils.py
fastapi_course/src/core/models/: user.py
fastapi_course/tasks/: tasks.py
