[tool.poetry]
name = "fastapi-course"
version = "0.1.0"
description = ""
authors = ["Lev <lafitel31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
pydantic = "^2.8.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
alembic = "^1.13.2"
uvicorn = "^0.30.6"
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
